[gd_scene load_steps=6 format=2]

[ext_resource path="res://global/managers/UIManager.gd" type="Script" id=1]
[ext_resource path="res://inventory/ui/InventoryScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://inventory/ui/Hotbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/ui/PlayerInfoScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://interactable/container/ContainerScreen.tscn" type="PackedScene" id=5]

[node name="UIManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HotbarRoot" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -277.0
margin_top = -79.0
margin_right = 277.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar" parent="HotbarRoot" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 547.0
margin_bottom = 77.0

[node name="InventoryRoot" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -54.0
margin_right = 279.0
margin_bottom = 178.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="InventoryRoot" instance=ExtResource( 2 )]
margin_right = 547.0
margin_bottom = 225.0

[node name="ContainerRoot" type="PanelContainer" parent="."]
margin_left = 335.0
margin_top = 163.0
margin_right = 959.0
margin_bottom = 309.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="ContainerRoot" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 617.0
margin_bottom = 139.0

[node name="PlayerInfoRoot" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" parent="PlayerInfoRoot" instance=ExtResource( 4 )]
margin_right = 57.0
margin_bottom = 121.0

[node name="Tween" type="Tween" parent="."]
